<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL (Language-independant) -->


    <!-- Core/Auto-generated Strings -->

    <string name="app_name">SMSLocator</string>
    <string name="placeholder">Content is supposed to be here. If you are seeing this, please go back and try again.</string>
    <string name="menu_settings">Settings</string>
    <string name="dev_admin">Device Administration</string>
    <string name="title_activity_set_keyword">Set Keyword</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_more_settings">More Settings</string>
    <string name="title_activity_app_help">Help</string>
    <string name="title_activity_help_display">Help > </string>
    <string name="title_activity_restrict_numbers">Restrict Numbers</string>
    <string name="title_activity_message_info">Message Info</string>
    <string name="title_activity_interactions">Interactions</string>

    <!-- Custom Strings -->
    <string name="app_terms">By using SMSLocator, you agree that you have read and understand the following:[br][br]SMSLocator may send text messages.[br][br]These messages are ONLY sent in response to messages that are addressed to SMSLocator using your keyword.[br][br]Due to the nature of SMSLocator, it is [i]not[/i] possible to review these message before sending. They can be seen after, however.[br][br]SMSLocator may send your device\'s location over text message when requested and when user authentication occurs.[br][br]SMSLocator does not store or send your personal information.</string>
    <string name="admin_details">SMSLocator requires admin privileges in order to function. Having these privileges prevents uninstalling of the app, which means you will need to disable SMSLocator before uninstalling the app. SMSLocator requests permission to lock your phone, so that the \'lock\' command can be run. In addition, the password reset permission is used to change your device PIN on your request.</string>
    <string name="keyword_message">Your keyword should contain letters, numbers, and symbols. Spaces are not allowed.</string>
    <string name="action_unlock">Premium</string>
    
    <string name="clabel_number">Number</string>
    <string name="clabel_date">Date</string>
    <string name="clabel_command">Command</string>
    <string name="clabel_response">Response</string>

    <!-- Dialog/Button Strings -->
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_tryagain">Try Again</string>
    <string name="dialog_setpin">Set Pin</string>
    <string name="dialog_terms">Terms of Use</string>
    <string name="dialog_agree">I Agree</string>
    <string name="dialog_donotagree">I Do Not Agree</string>
    <string name="dialog_notice">Notice</string>
    <string name="dialog_enterpin">Enter Pin</string>
    <string name="dialog_numopt">Number Options</string>
    <string name="dialog_numbody">Do you want to remove or edit the number\u0020</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_editnum">Edit Number</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_addnum">Add Number</string>
    <string name="dialog_firstrun">Welcome to SMSLocator! To start using the app, simply tap the button labeled \"Enable SMSLocator\". By default, you won\'t be able to access the extra commands and Google Maps links will not be sent. To enable these features, please purchase the premium upgrade!</string>
    <string name="dialog_welcome">Welcome!</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_upgrade">By upgrading SMSLocator to the premium version, you will get access to all the commands, Google Maps links will be sent along with device coordinates, and ads will be removed. Thank you for supporting the app and myself!</string>
    <string name="dialog_premium">Premium</string>
    <string name="dialog_restore">Restore</string>
    <string name="dialog_finishSetupTitle">Finish Setup</string>
    <string name="dialog_finishSetupMessage">You\'re almost done! Now, all that\'s left for you to do is set your keyword. Once you do that, you\'re all set! To see what commands are available, and how to format them, check out the Commands help section.</string>
    <string name="dialog_gotoKeyword">Set Keyword</string>
    <string name="dialog_adblock_title">Ad Blocker Detected</string>
    <string name="dialog_adblock_msg">It seems that you\'re using an ad blocker on this device. To use SMSLocator, please disable it or purchase premium. If you believe this message is in error, please contact support.</string>
    <string name="dialog_purchase">Purchase</string>
    <string name="dialog_watchad">Watch Ad</string>

    <string name="dialog_pleaseWait">Please wait&#8230;</string>
    <string name="dialog_interactionLoad">Interactions are currently loading.</string>
    <string name="dialog_clearInteractions">Clear Interactions?</string>
    <string name="dialog_clearInteractionsMessage">Would you like to clear the list of interactions? This can\'t be undone.</string>
    <string name="dialog_clear">Clear</string>

    <string name="dialog_freemium_success">Success! You have unlocked premium for 7 days. Expiry:</string>
    <string name="dialog_fremium_expired">Your free week of premium has expired. Please purchase or watch another video if you would like to continue using premium features!</string>
    <string name="dialog_premium_offline">Uh-oh! We\'re having trouble accessing the Google Play store. Please double-check your internet connection then try again.</string>
    
    <!-- Messages -->
    <string name="message_confirmpin">Please confirm your pin to change this setting.</string>
    <string name="message_confirmdisable">Please confirm your pin to disable SMSLocator.</string>
    <string name="message_noadmin">You did not grant SMSLocator admin permissions. This is required in order to use premium features. Please enable SMSLocator again and accept the admin request.</string>
    <string name="message_choosepin">Please choose a pin. You MUST remember this in order to change SMSLocator settings</string>
    <string name="message_pinset">Pin set!</string>
    <string name="message_message">Message:\n</string>
    <string name="message_to">To:\u0020</string>
    <string name="message_admindisable">Revoking admin permissions will disable SMSLocator. Continue?</string>
    <string name="message_smslocatordisabled">SMSLocator has been disabled!</string>
    <string name="message_confirmpasschange">Enter your pin to confirm keyword change.</string>
    <string name="message_passchanged">Keyword changed!</string>
    <string name="message_of">of</string>
    <string name="message_swipe">Swipe left and right to navigate between messages.</string>
    <string name="message_restored">Premium purchase has been restored. All features unlocked!</string>
    <string name="message_interactionsCleared">Interactions Cleared!</string>
    <string name="message_activatedndaccess">Enable "SMSLocator" on this page to allow Do-Not-Disturb control. When done, press back.</string>

    <!-- Error Messages -->
    <string name="error_badpin">Incorrect Pin!</string>
    <string name="error_decoding">Error decoding pin! Please try again.</string>
    <string name="error_pinmatch">Pins don\'t match or are empty! Please try again.</string>
    <string name="error_loadinghelp">Whoops! This is embarrassing… Looks like either this shouldn\'t be here, we didn\'t add the help info yet, or you just found a bug! Please go back and try again. If this issue persists, please email support.</string>
    <string name="error_keyspaces">Keyword contains spaces!</string>
    <string name="error_keymatch">Keywords don\'t match!</string>
    <string name="error_keyblank">Keyword is blank!</string>
    <string name="error_setpin">PIN is either empty or too short. Please try again.</string>
    <string name="error_msgjson">An error occurred while loading the message data.</string>
    <string name="error_premiumcheck">An error occurred while checking premium status.</string>
    <string name="error_purchase">An error occurred while attempting purchase.</string>
    <string name="error_notowned">You haven\'t purchased premium on this account!</string>
    <string name="error_permissions">Permission(s) not granted! These are required for the app to work.</string>
    <string name="error_novideo">Failed to load video!</string>

    <!-- Notifications -->
    <string name="notif_sent_title">Message Sent</string>
    <string name="notif_sent_body">A message has been sent to\u0020</string>
    <string name="notif_alert_title">Location Alerts On</string>
    <string name="notif_alert_body">Location alerts are being sent to\u0020</string>
    <string name="notif_channel_name_sms">SMS Alerts</string>

    <!-- Preferences -->
    <string name="prefs_notif">Notify on Request</string>
    <string name="prefs_notif_desc">When SMS Locator sends a message, a message will be placed in the notification bar.</string>
    <string name="prefs_refresh">Refresh Time</string>
    <string name="prefs_refresh_desc">Maximum time a location is valid.</string>
    <string name="prefs_notif_priority">Notification Priority</string>
    <string name="prefs_notif_priority_desc">Sets how important the notifications are. High and above will show heads-up notifications (Lollipop only)</string>
    <string name="prefs_gpswait">GPS Wait Time</string>
    <string name="prefs_gpswait_desc">Sets how long the device tries to get a new location before sending an old one</string>

</resources>